feat: Multer subida de archivos + validaciones express-validator + Swagger actualizado
