# backend/src/app.js
@@ -17,12 +17,14 @@ const empresasRoutes = require('./routes/empresas');
 const vitrinaRoutes = require('./routes/vitrina');
 const solicitudesRoutes = require('./routes/solicitudes');
 const adminRoutes = require('./routes/admin');
+const archivosRoutes = require('./routes/archivos');
 
 // Importo rate limiting
 const { limiteGeneral, limiteLogin } = require('./config/rateLimit');
 
 // Importo el manejador de errores
 const errorHandler = require('./middleware/error');
+
 
 // Cargo el archivo swagger.yaml
 const swaggerDocument = YAML.load('./src/docs/swagger.yaml');
@@ -52,6 +54,7 @@ app.use('/api/v1/empresas', empresasRoutes);
 app.use('/api/v1/vitrina', vitrinaRoutes);
 app.use('/api/v1/solicitudes', solicitudesRoutes);
 app.use('/api/v1/admin', adminRoutes);
+app.use('/api/v1/archivos', archivosRoutes);
 
 // Manejo de errores centralizado — debe ir al final
 app.use(errorHandler);
